@@ -1,3 +1,6 @@
+2009-05-14 yusei
+* Remove default tales expression from my_text_content field in Base_viewFieldLibrary. That used a CRM specific script.
+
 2009-05-08 yusei
 * Add a template field for Link Field to Base_viewFieldLibrary.
 * Add template fields for Multi Checkbox Field and Input Button Field to Base_viewFieldLibrary.
